# website-agent

./: .flake8  .gitignore  README.md  chatbot.py  langgraph.json  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_backup.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
WP_Plugin/plugin-wp-v_3/includes/: class-admin-interface.php  class-frontend-manager.php
WP_Plugin/plugin-wp-v_3_ok/: veronica-chatbot.php
WP_Plugin/plugin-wp-v_3_ok/includes/: class-settings-manager.php
WP_Plugin/plugin-wp-v_3_refactor/includes/: class-frontend-manager.php  class-main-plugin.php  class-utility-functions.php
WP_Plugin/plugin-wp-v_4/: veronica-chatbot.php
WP_Plugin/plugin-wp/assets/: chatbot.js
WP_Plugin/plugin-wp_v2_1_2/: veronica-chatbot.php
me/: summary.txt
plugin-wp/: veronica-chatbot.php
plugin-wp copy/: veronica-chatbot.php
plugin-wp copy 2/: veronica-chatbot.php
plugin-wp copy 2/assets/: chatbot.js
plugin-wp/assets/: chatbot.js
plugin-wp_v_1_0_2/: veronica-chatbot.php
plugin-wp_v_2_1/: veronica-chatbot.php
plugin-wp_v_2_1/assets/: chatbot.js
src/OLD_BACKUP/: chatbot.py  main.py
src/veronica_wordpress_chatbot/: __init__.py  chatbot.py  config.py  main.py  models.py  py.typed
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: README_LANGSMITH_DATASET.md  langsmith_test_dataset.json  langsmith_test_dataset.jsonl
tests/integration/: test_workflow.py
tests/unit/: test_security.py  test_tools.py
(+83 files in other folders)
